corrected spacing of messages text

--- a/app/assets/stylesheets/components/_message.scss
+++ b/app/assets/stylesheets/components/_message.scss
@@ -7,14 +7,15 @@
   padding: 20px;
   background-color: $medium-dark-gray;
   color: $light-gray;
-  border-radius: 4px;
+  border-radius: 3px;
 
   p {
-    margin: 5px 0;
+    margin: 0;
+    padding: 5px 0;
   }
 
   a {
-    // font-weight: bolder;
+    font-weight: bolder;
     color: white;
   }
 }
